--- a/week4.qmd
+++ b/week4.qmd
@@ -11,14 +11,24 @@ title: "Week 4 | 3. Exploratory analysis"
 
 </br>
 
+
+
 :::{.panel-tabset}
 
 ## Done in Class
 
 > Now my data is tidy. What to do next?
 
-1. **Create a directory for the task of writing a data descriptor paper.**   
-It should have the following structure:
+![To keep your files organized and easy to find, it's a good idea to set up a clear naming system before you start collecting data. 
+A file naming convention is a consistent way to name files so it's clear what's inside and how each file connects to others. This helps you quickly understand and locate files, avoiding confusion or lost data later on. | Image: https://xkcd.com/1459/](pics/documents_xkcd.png)
+
+1. **Create a directory for the task of writing a data descriptor paper.** 
+
+A key part of good data management is organizing your data effectively. This means planning how you’ll name files, arrange folders, and show relationships between them.   
+Researchers should set up folder structures that reflect how records were created and align with their workflows. Doing this improves clarity, makes it easier to save, find, and archive files, and supports collaboration across teams.   
+**Establishing a clear file structure and naming system before collecting data ensures consistency and helps team members work more efficiently together.**
+
+We propose the following structure:
 
     data_descriptor_paper/    
     ├── data/    
